--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,6 @@ a {
     color: #000000;
 }
 
-
-
 /* -------- кнопки --------- */
 
 .btn {
@@ -380,7 +378,7 @@ li .logout:active {
     left: 0;
     width: 27px;
     height: 23px;
-    top: 7px;
+    top: 9px;
 }
 
 .color_checkbox input[type="checkbox"] + .checkbox_indicator::before {
@@ -568,7 +566,7 @@ label.color_checkbox:disabled > .checkbox_indicator::after  {
 }
 
 .slide_item_3 .promo_slogan {
-    width: 501px;
+    width: 508px;
     z-index: 1;
 }
 
@@ -1079,11 +1077,6 @@ label.color_checkbox:disabled > .checkbox_indicator::after  {
 
 .tab_content {
     position: relative;
-    display: none;
-}
-
-.tab_content.active {
-    display: block;
 }
 
 .delivery_content::before {
@@ -1998,7 +1991,7 @@ fieldset {
   .range-toggle-max {
     left: 51%;
   }
-  
-.hidden {
+
+.covered {
     display: none;
 }
