--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ input.visually_hidden:focus+.checkbox_indicator::before,
 input.visually_hidden:focus+.checkbox_indicator::after,
 input.visually_hidden:focus+.radio_indicator::before,
 input.visually_hidden:focus+.radio_indicator::after {
-	opacity: 0.6;
+    opacity: 0.6;
 }
 
 input.visually_hidden:focus+.checkbox_indicator::before,
@@ -1805,7 +1805,8 @@ fieldset {
 	transition: 0.35s;
 }
 
-.catalog_items:hover>.hidden_block {
+.catalog_items:hover>.hidden_block,
+.catalog_items:focus>.hidden_block {
 	display: block;
 	opacity: 1;
 	visibility: visible;
