--- a/css/style.css
+++ b/css/style.css
@@ -1329,7 +1329,7 @@ ul .dellivery_company {
 
 .nav_footer .logout {
 	margin-left: 20px;
-	color: rgba(31, 22, 22, 0.3);
+    color: rgba(255, 255, 255);
 }
 
 .footer_top,
