--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ a {
 	content: "";
 	position: absolute;
 	left: 0;
-	top: 17px;
+	top: 15px;
 	width: 8px;
 	height: 8px;
 	border: 2px solid #e6e6e6;
@@ -387,11 +387,7 @@ li .logout:active {
 }
 
 label.color_checkbox:hover>.checkbox_indicator::before,
-label.color_checkbox:hover>.checkbox_indicator::after,
-input.visually_hidden:focus+.checkbox_indicator::before,
-input.visually_hidden:focus+.checkbox_indicator::after,
-input.visually_hidden:focus+.radio_indicator::before,
-input.visually_hidden:focus+.radio_indicator::after {
+label.color_checkbox:hover>.checkbox_indicator::after {
     opacity: 0.6;
 }
 
@@ -1867,6 +1863,7 @@ fieldset {
 }
 
 .write_us {
+    position: relative;
 	padding-left: 100px;
 	padding-right: 100px;
 }
@@ -1874,7 +1871,6 @@ fieldset {
 .modal_feedback {
 	background-color: #ffffff;
 	width: 960px;
-	height: 553px;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -1960,18 +1956,24 @@ fieldset {
 	border: 0;
 	font-size: 0;
 	background-color: transparent;
-	cursor: pointer;
+    cursor: pointer;
+    position: absolute;
+	top: 22px;
+    right: 22px;
+    width: 55px;
+    height: 55px;
 }
 
 .modal .modal_close::before {
-	content: "";
-	position: absolute;
-	top: 22px;
-	left: 883px;
+    content: "";
+    position: absolute;
 	background-image: url(../img/modal-close.png);
-	width: 55px;
-	height: 55px;
-	opacity: 0.5;
+	width: 100%;
+	height: 100%;
+    opacity: 0.5;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
 }
 
 .modal_close:hover::before {
@@ -1979,7 +1981,11 @@ fieldset {
 }
 
 .modal_close:focus::before {
-	opacity: 0.3;
+    opacity: 0.3;
+}
+
+.modal_close:focus {
+    outline: none;
 }
 
 .modal_feedback .btn {
