--- a/css/style.css
+++ b/css/style.css
@@ -848,7 +848,8 @@ label.color_checkbox:disabled>.checkbox_indicator::after {
 	position: absolute;
 	top: -40px;
 	-webkit-transform: translate(0, 50%);
-	        transform: translate(0, 50%);
+			transform: translate(0, 50%);
+	vertical-align: middle;
 }
 
 .menu_search {
@@ -1799,6 +1800,7 @@ fieldset {
 .choose span:first-child {
 	display: inline-block;
 	margin-bottom: 13px;
+	vertical-align: middle;
 }
 
 .color_choose {
@@ -2153,6 +2155,7 @@ fieldset {
 	vertical-align: top;
 	color: rgba(0, 0, 0, 0.2);
 	cursor: pointer;
+	vertical-align: middle;
 }
 
 .price_controls .min_price,
